# LearnAiInfra

./: .gitignore
day1/dataloader-profiling/: .gitignore  README.md  my_train.py  requirements.txt  train.py
day2/cpp-python-demo/: lab1.cpp
day2/cpp-python-demo/lab2/: CMakeLists.txt  tmp-demo.h
day2/cpp-python-demo/lab2/src/: main.cpp
day2/python_cpp_demo/: CMakeLists.txt  benchmark.py  test.py
day2/python_cpp_demo/cpp/: binding.cpp
